cluster/apps/home/music-assistant/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
  namespace: home
  annotations:
    lbipam.cilium.io/ips: 192.168.3.63
spec:
  type: LoadBalancer
  selector:
    app: music-assistant
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8095
    - name: stream
      port: 8097
      protocol: TCP
      targetPort: 8097
