cluster/apps/home/music-assistant/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: music-assistant-http
  namespace: home
spec:
  hostnames:
    - ma.btkostner.network
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: music-assistant
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
